dxscale/sales/main/objects/Opportunity/fields/Amount_TCV_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_TCV_Change_Date__c</fullName>
    <description>Displays the last time this field was changed.</description>
    <inlineHelpText>Displays the last time this field was changed.</inlineHelpText>
    <label>Amount (TCV) Change Date</label>
    <type>Date</type>
</CustomField>