dxscale/sales/main/objects/Opportunity/fields/Annual_recurring_ACV_rollup__c.field-meta.xml
<CustomField>
    <fullName>Annual_recurring_ACV_rollup__c</fullName>
    <description>Annual recurring revenue for non-CBC products</description>
    <formula>IF( Contract_Term_Months__c &gt; 11, Monthly_Recurring_Revenue_rollup__c * 12, Monthly_Recurring_Revenue_rollup__c * Contract_Term_Months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual recurring revenue for non-CBC products</inlineHelpText>
    <label>Annual Contract Value (ACV) - Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>