dxscale/sales/main/objects/Opportunity/fields/Annual_Sales_Booking_ASB__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Booking_ASB__c</fullName>
    <inlineHelpText>Annual Sales Booking represents the annual recurring (renewable) part of a deal including the non-recurring (non-renewable)</inlineHelpText>
    <label>Annual Sales Booking (ASB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>