dxscale/sales/main/objects/Opportunity/fields/Annual_Sales_Booking_Formula__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Booking_Formula__c</fullName>
    <formula>Annual_recurring_ACV_rollup__c + Non_recurring_Revenue_rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Sales Booking (ASB) - Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>