dxscale/sales/main/objects/Opportunity/fields/Confirm_Correct_License__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Correct_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox to confirm that the associated License is the one that you wish to convert to production status.  When checked and saved it will create a Customer record and a draft Service Order record.</description>
    <inlineHelpText>Use this checkbox to confirm that the associated License is the one that you wish to convert to production status.  When checked and saved it will create a Customer record and a draft Service Order record.</inlineHelpText>
    <label>Confirm License / Create Draft Order</label>
    <type>Checkbox</type>
</CustomField>