dxscale/sales/main/objects/Opportunity/fields/CreatedByRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRole__c</fullName>
    <description>Displays Created by Users Role</description>
    <inlineHelpText>Displays Created by Users Role</inlineHelpText>
    <label>Created By Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>