dxscale/sales/main/objects/Opportunity/fields/Demo_Booked_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Booked_Date_Time__c</fullName>
    <label>Protected / Demo Booked Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>