dxscale/sales/main/objects/Opportunity/fields/Discount_Approver__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who approved discount.</description>
    <inlineHelpText>Person who approved discount.</inlineHelpText>
    <label>Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>