dxscale/sales/main/objects/Opportunity/fields/DM_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Won_Amount__c</fullName>
    <formula>IF (IsWon = true, Annual_Sales_Booking_ASB__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>