dxscale/sales/main/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact Email</description>
    <inlineHelpText>Primary Contact Email</inlineHelpText>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>