dxscale/sales/main/objects/Opportunity/fields/Expected_Revenue_ACV__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_ACV__c</fullName>
    <label>Expected Revenue (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>