dxscale/sales/main/objects/Opportunity/fields/Expected_Value_RRP__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value_RRP__c</fullName>
    <description>To capture the expected contract value that the customer would have paid</description>
    <inlineHelpText>Populate the monthly value the customer was paying before the downgrade/discount. If you have confirmed the customer will pay full value, both opportunity value and expected value should be the same.</inlineHelpText>
    <label>Monthly Expected Value (RRP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>