dxscale/sales/main/objects/Opportunity/fields/Final_Success_Goals__c.field-meta.xml
<CustomField>
    <fullName>Final_Success_Goals__c</fullName>
    <description>Used to store Final Success Goals values for Onboarding Opportunities. Created as part of EAD-2161. Not to be displayed on any layouts</description>
    <label>Final Success Goals</label>
    <type>TextArea</type>
</CustomField>