dxscale/sales/main/objects/Opportunity/fields/Go_Live_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Planned_Date__c</fullName>
    <description>Planned date for GoLive.</description>
    <inlineHelpText>Planned date for GoLive.</inlineHelpText>
    <label>Go-Live Planned Date</label>
    <type>Date</type>
</CustomField>