dxscale/sales/main/objects/Opportunity/fields/Include_In_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the opportunity should be included in the forecast.</description>
    <label>Include In Forecast</label>
    <type>Checkbox</type>
</CustomField>