dxscale/sales/main/objects/Opportunity/fields/Intervention_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Renewal_Date__c</fullName>
    <description>TBC</description>
    <label>Intervention(Renewal)Date</label>
    <type>DateTime</type>
</CustomField>