dxscale/sales/main/objects/Opportunity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>ENHC0011018-Add &quot;Invoice Number&quot; field to Opportunity. Free Text field for Enterprise Sales</description>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>