dxscale/sales/main/objects/Opportunity/fields/Local_Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>Local_Billing_Details__c</fullName>
    <description>Information used for reconciliation purposes. Refer to your local Sales Ops for regional requirements. General Format: Local Customer ID, Local Billing ID</description>
    <inlineHelpText>Information used for reconciliation purposes. Refer to your local Sales Ops for regional requirements. General Format: Local Customer ID, Local Billing ID</inlineHelpText>
    <label>Local Billing Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>