dxscale/sales/main/objects/Opportunity/fields/Next_Steps_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Last_Update__c</fullName>
    <formula>NS_Last_Update__c</formula>
    <label>Next Steps Last Update</label>
    <type>Date</type>
</CustomField>