dxscale/sales/main/objects/Opportunity/fields/NS_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>NS_Last_Update__c</fullName>
    <label>NS Last Update</label>
    <type>Date</type>
</CustomField>