dxscale/sales/main/objects/Opportunity/fields/NS_Last_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>NS_Last_Update_Time__c</fullName>
    <label>NS Last Update Time</label>
    <type>DateTime</type>
</CustomField>