dxscale/sales/main/objects/Opportunity/fields/Onboarding_Score__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Score__c</fullName>
    <description>Field added as part of EAD-2307. Not added on any layout</description>
    <label>Onboarding Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>