dxscale/sales/main/objects/Opportunity/fields/OnSite_Validation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>OnSite_Validation_Request_Date__c</fullName>
    <description>Part of CCORE-1974. To collect the information from the customer to know when they want the validation of the Product needs to be on Onsite.</description>
    <label>OnSite Validation Request Date</label>
    <type>Date</type>
</CustomField>