dxscale/sales/main/objects/Opportunity/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Salesforce field relevant for smart sheets EAD-1811</description>
    <inlineHelpText>Salesforce field relevant for smart sheets</inlineHelpText>
    <label>Order Status</label>
    <type>TextArea</type>
</CustomField>