dxscale/sales/main/objects/Opportunity/fields/Other_Success_Goals__c.field-meta.xml
<CustomField>
    <fullName>Other_Success_Goals__c</fullName>
    <description>Used to store Other Success values for Onboarding Opportunities. Created as part of EAD-2161. Not to be displayed on any layouts.</description>
    <label>Other Success Goals</label>
    <length>40</length>
    <type>Text</type>
</CustomField>