dxscale/sales/main/objects/Opportunity/fields/Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email__c</fullName>
    <label>Owner Manager Email</label>
    <type>Email</type>
</CustomField>