dxscale/sales/main/objects/Opportunity/fields/Owner_Manager_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email_Formula__c</fullName>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Email Formula</label>
    <type>Text</type>
</CustomField>