dxscale/sales/main/objects/Opportunity/fields/ProductAllocationGroupAD__c.field-meta.xml
<CustomField>
    <fullName>ProductAllocationGroupAD__c</fullName>
    <description>EAD-2355 filter the flow New Customer Call - Accountant since SF not allow BEGIN* option</description>    
    <formula>OR(
BEGINS(TEXT(Product_Allocation_Group__c ),&quot;AD&quot;),
BEGINS(TEXT(Product_Allocation_Group__c ),&quot;G&quot;)
)</formula>
    <label>ProductAllocationGroupAD</label>
    <type>Checkbox</type>
</CustomField>