dxscale/sales/main/objects/Opportunity/fields/Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The field tracks the number of times an Opportunity close date is moved into the following month/year.</description>
    <inlineHelpText>The field tracks the number of times an Opportunity close date is moved into the following month/year.</inlineHelpText>
    <label>Push Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>