dxscale/sales/main/objects/Opportunity/fields/Referral_Reward_Paid__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reward_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To record if referral reward has been paid
Read only on all Profiles (apart from Admins). Write access granted by Sage: CBC Partner Referral Finance Permission Set.
Created as part of the Amplifinity Project</description>
    <label>Referral Reward Paid</label>
    <type>Checkbox</type>
</CustomField>