dxscale/sales/main/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <defaultValue>&quot;Other&quot;</defaultValue>
    <description>For Reporting</description>
    <inlineHelpText>For Reporting</inlineHelpText>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>