dxscale/sales/main/objects/Opportunity/fields/Renewal_Billingfilefullvalue__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Billingfilefullvalue__c</fullName>
    <description>Billing file full value Created for EAD-1971</description>
    <label>Billing file full value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>