dxscale/sales/main/objects/Opportunity/fields/Renewal_FirstBillingDate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_FirstBillingDate__c</fullName>
    <description>This would then generate a new opportunity for the next renewal period.</description>
    <inlineHelpText>Field to be updated by - TBC</inlineHelpText>
    <label>First Billing Date</label>
    <type>Date</type>
</CustomField>