dxscale/sales/main/objects/Opportunity/fields/Renewal_InterventionDate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_InterventionDate__c</fullName>
    <description>It is the closed date</description>
    <inlineHelpText>The current annual renewal date</inlineHelpText>
    <label>Intervention Date (Renewal)</label>
    <type>Date</type>
</CustomField>