dxscale/sales/main/objects/Opportunity/fields/Renewal_PromisePaiddate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_PromisePaiddate__c</fullName>
    <description>it is Promise paid date EAD-1971</description>
    <label>Promise Paid Date</label>
    <type>Date</type>
</CustomField>