dxscale/sales/main/objects/Opportunity/fields/Reward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reward_Amount__c</fullName>
    <description>Reward Amount to be paid to the Referrer.
Field is populated by a Trigger and is the Numeric Value of Reward Amount (ACV*Referral Reward Amount) converted to Partner Account Currency (which may be different to Opportunity Currency)
Field is hidden on all page layouts.</description>
    <label>Reward Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>