dxscale/sales/main/objects/Opportunity/fields/RoleOfCloudSoftware__c.field-meta.xml
<CustomField>
    <fullName>RoleOfCloudSoftware__c</fullName>
    <description>EAD-2355:  The role that cloud software currently plays within the practice</description>
    <inlineHelpText>The role that cloud software currently plays within the practice</inlineHelpText>
    <label>Role of Cloud Software</label>
    <type>TextArea</type>
</CustomField>