dxscale/sales/main/objects/Opportunity/fields/Signed_Order__c.field-meta.xml
<CustomField>
    <fullName>Signed_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for Laura Tortosa-Sanchez in line with CCORE and Release 2B</description>
    <label>Signed Order</label>
    <type>Checkbox</type>
</CustomField>