dxscale/sales/main/objects/Opportunity/fields/Total_Contract_Value_TCV_forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_TCV_forecast__c</fullName>
    <inlineHelpText>Total Contract Value represents both recurring (renewable) and non-recurring (non-renewable) part of a deal over the full term of the contract</inlineHelpText>
    <label>Total Contract Value (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>