dxscale/sales/main/objects/Opportunity/fields/TransferTo__c.field-meta.xml
<CustomField>
    <fullName>TransferTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CCORE HOT-FIX: Interim field to support mass assigning of opportunities to team members</description>
    <label>Transfer To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TrasnferredOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>