dxscale/sales/main/objects/Opportunity/fields/WhoHasSignOff__c.field-meta.xml
<CustomField>
    <fullName>WhoHasSignOff__c</fullName>
    <label>Who Has Sign Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>