dxscale/sales/main/objects/Opportunity/validationRules/ACV_Value_must_be_populated_for_ClosedWo.validationRule-meta.xml
<ValidationRule>
    <fullName>ACV_Value_must_be_populated_for_ClosedWo</fullName>
    <active>true</active>
    <description>ACV Value must be populated for Opportunities that have had Partner involvement before it can be set to Closed Won</description>
    <errorConditionFormula>AND($Setup.OpportunityControlSwitch__c.RunValidationRules__c,NOT(ISBLANK( Referring_Partner_Account__c )),
      ISBLANK(Amount_ACV__c),
       IsWon )</errorConditionFormula>
    <errorMessage>Please ensure an ACV amount is calculated for this Opportunity before Closing it</errorMessage>
</ValidationRule>