dxscale/sales/main/objects/Opportunity/validationRules/Channel_Type_Mandatory_From_Discovery.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Type_Mandatory_From_Discovery</fullName>
    <active>true</active>
    <description>&apos;Channel Type&apos; field must be entered from the Discovery stage onward.</description>
    <errorConditionFormula>AND( 
   $Setup.OpportunityControlSwitch__c.RunValidationRules__c,
   AND(!ISPICKVAL( StageName , &apos;Qualify&apos;) ,ISBLANK(TEXT( Channel_Type__c )),  OR( RecordType.DeveloperName=&apos;Enterprise_Opportunity&apos;,RecordType.DeveloperName=&apos;Standard_Opportunity&apos;),OR($Profile.Name = &apos;Sage: Global Sales User&apos;, 
$Profile.Name = &apos;Sage: Sales User with Lightning&apos; ) )
)</errorConditionFormula>
    <errorMessage>&apos;Channel Type&apos; field must be entered from the Discovery stage onward.</errorMessage>
</ValidationRule>