dxscale/sales/main/objects/Opportunity/validationRules/No_of_Licenses_is_mandatory_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>No_of_Licenses_is_mandatory_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DATEVALUE(CreatedDate)&gt; DATE(2020,08,01),ISBLANK( TEXT(No_of_Licenses__c)),
$Permission.Sage_Global_NA_Sales_Agent,
ISPICKVAL(StageName, &apos;Selection&apos;),
OR(ISPICKVAL(Product_Solution__c, &apos;X3&apos;), CONTAINS(Roll_up_of_Opp_Products__c, &apos;X3&apos;),
CONTAINS(Roll_up_of_Opp_Products__c, &apos;Enterprise Management&apos;))
)</errorConditionFormula>
    <errorMessage>No of Licenses is mandatory at Selection stage.</errorMessage>
</ValidationRule>