dxscale/sales/main/objects/Opportunity/validationRules/Opportunity_Lead_Source_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Lead_Source_Mandatory</fullName>
    <active>true</active>
    <description>Opportunity/Lead source is mandatory for all non sysadmin and integration profiles.</description>
    <errorConditionFormula>AND( 
   $Setup.OpportunityControlSwitch__c.RunValidationRules__c,
   ISBLANK(TEXT(Lead_Source__c))
)</errorConditionFormula>
    <errorMessage>Please enter a Opportunity/Lead Source</errorMessage>
</ValidationRule>